# hqfbp-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  explore-2.txt  explore-3.txt  explore-4.txt  explore-5.txt  explore-6.txt  inject_noise.py  test_cross_compat_noise.sh  test_cross_compat_py_rs.sh  test_cross_compat_rs_py.sh  test_roundtrip.sh  test_rs_power_py.py  visual_explore.py
.agent/workflows/: verify-rust.md
.github/workflows/: ci.yml  release.yml
agent_docs/: architecture.md  conventions.md  cross_implementation_testing.md  encodings.md  testing_guidelines.md
benches/: bench_hqfbp.rs
scripts/: reproduce_reports.sh  test_against_py_samples.py
src/: codec.rs  deframer.rs  error.rs  generator.rs  lib.rs  random_encoding.rs  random_sensible_encoding.rs
src/codec/: asm.rs  ax25.rs  brotli.rs  chunk.rs  conv.rs  crc16.rs  crc32.rs  golay.rs  gzip.rs  h.rs  identity.rs  lt.rs  lzma.rs  mod.rs  post_asm.rs  repeat.rs  rq.rs  rs.rs  scr.rs
tests/: repro_crc.rs  repro_rq_panic.rs  test_asm.rs  test_ax25.rs  test_concatenated.rs  test_conv.rs  test_deframer.rs  test_early_decoding.rs  test_fix_regressions.rs  test_fragmentation.rs  test_generator.rs  test_golay.rs  test_hqfbp.rs  test_lt_interop.rs  test_media_type.rs  test_post_asm.rs  test_raptorq.rs  test_regressions.rs  test_reliability.rs  test_requested_encoding.rs  test_rs.rs  test_rs_power.rs  test_scrambler.rs  test_verify_rs.rs
