[package]
name = "hqfbp-rs"
version = "0.1.0"
edition = "2024"
authors=["Loïc Fejoz <loic@fejoz.net>"]

[dependencies]
minicbor = { version = "0.26", features = ["derive", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reed-solomon = "0.2"
raptorq = "1.8"
flate2 = "1.0"
brotli = "7.0"
lzma-rs = "0.3"
crc = "3.2"
regex = "1.11"
anyhow = "1.0"
hex = "0.4"
bitvec = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
csv = "1.3"
mime_guess = "2.0"
chrono = "0.4"
bytes = "1.11"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
proptest = "1.6"
criterion = "0.5"

[[bench]]
name = "bench_hqfbp"
harness = false

[profile.release]
codegen-units = 1
debug = true
strip = true
lto = true
